--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -2,7 +2,7 @@
 @import "components";
 
 @import "./tether/tether.min.css";
-@import "./bootstrap/scss/bootstrap";
+@import "./bootstrap/scss/bootstrap-flex";
 @import "./fontawesome/font-awesome";
 @import "./chosen/bootstrap-chosen.scss";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
@@ -45,6 +45,7 @@ label {
 
 .pagination-wrapper {
 	text-align: center;
+	width: 100%;
 }
 
 .btn-loading {
@@ -158,3 +159,41 @@ form.inline {
 .window-inline .hide-inline {
 	display: none;
 }
+
+.card-deck {
+	width: 100%;
+
+	.card {
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-flex: 1;
+		-webkit-flex: 1 0 0%;
+		-ms-flex: 1 0 0%;
+		flex: 1 0 0%;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
+
+		@include media-breakpoint-up(md) {
+			max-width: 31%;
+		}
+
+		.card-block {
+			-webkit-box-flex: 1;
+			-webkit-flex: 1 1 auto;
+			-ms-flex: 1 1 auto;
+			flex: 1 1 auto;
+			padding: 1.25rem;
+			overflow: hidden;
+
+			.MathJax_Display {
+				display: none !important;
+			}
+		}
+	}
+}
+
