--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -40,12 +40,14 @@
                                 <div class="current-time" style="width:{{currentTimePercentage}}%;">
                                     <span>{{currentTime}}</span>
                                 </div>
-                                <div>
-                                    {{#each hours}}
-                                        <div class="col-sm-1">
-                                            <div class="tick">{{this}}.00</div>
-                                        </div>
-                                    {{/each}}
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        {{#each hours}}
+                                            <div class="col-sm-1">
+                                                <div class="tick">{{this}}.00</div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
                                 </div>
                             </div>
                         </div>
