--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-sm-12 no-padding">
                                 <h5>Stundenplan</h5>
-                                <time class="selected-date">Montag, 20. März 2017</time>
+                                <time class="selected-date">{{eventsDate}}</time>
                             </div>
                         </div>
                     </div>
