Diskussionsbereich zu Abgabe verständlicher Implementiert
In Absprache mir Lars
Design fehlt noch

--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -98,15 +98,7 @@
 
             display: none;
             color: #373a3c;
-            /* text-align:center;
-            padding: 5px;
-            margin: 3px 0;
-            width: 1.8rem;
-            font-size: 1rem;
-            line-height: 1rem;
-            background-color: grey;
-            color: #fff;
-            border-radius: 5px; */
+            background-color:transparent;
           }
           &:hover .btn {
             display: inline-block;
