--- a/views/homework/discussion.hbs
+++ b/views/homework/discussion.hbs
@@ -1,5 +1,5 @@
-<section id="discussion" class="tab-content section-homeworkdetails active">
-    <div class="commentarea form-group">
+<section id="discussion" class="tab-content section-homeworkdetails">
+    <div class="discussionarea">
         <ul class="comments">
             {{#each @root.comments}}
                 <li class="comment">
