--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -70,6 +70,8 @@
 {{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/homework/assignment.css"/>
     <link rel="stylesheet" href="/styles/homework/submissions.css"/>
+    <link rel="stylesheet" href="/styles/homework/discussions.css"/>
+    <link rel="stylesheet" href="/styles/homework/tabs.css"/>
     <style>.section-title h4::before{content:"● {{#if private}}🔒 {{/if}}";color:{{this.color}};</style>
 {{/content}}
 
@@ -81,7 +83,7 @@
                 {{availableDateF}} ({{availableTimeF}})<br/>
                 bis: {{dueDateF}} ({{dueTimeF}})
             </div>
-            <div class="tab-view">
+            <div class="tab-view maintabs">
                 <nav class="tab-links">
                     <a id="extended-tab-link" class="tab-link active" href="#activetabid=extended" alt="Details der Aufgabe">Details</a>
                     {{#if private}}
@@ -92,9 +94,10 @@
                         {{else}}
                             <a id="submission-tab-link" class="tab-link" href="#activetabid=submission" alt="Deine Abgabe">Abgabe</a>
                             <a id="feedback-tab-link" class="tab-link" href="#activetabid=feedback" alt="Bewertung deiner Abgabe durch den Lehrer">Feedback</a>
-                            <a id="discussion-tab-link" class="tab-link" href="#activetabid=discussion" alt="Diskussionsbereich zu deiner Abgabe">Diskussion</a>
                             {{#if publicSubmissions}}
                                 <a id="submissions-tab-link" class="tab-link" href="#activetabid=submissions" alt="alle Abgaben">Abgaben</a>
+                            {{else}}
+                                <a id="discussion-tab-link" class="tab-link" href="#activetabid=discussion" alt="Diskussionsbereich zu deiner Abgabe">Diskussion</a>
                             {{/if}}
                         {{/ifvalue}}
                     {{/if}}
@@ -103,16 +106,16 @@
 {{> 'homework/extended'}}
                     {{#if private}}
 {{> 'homework/submission'}}
-{{> 'homework/discussion'}}
                     {{else}}
                         {{#ifvalue teacherId value=currentUser._id}}
 {{> 'homework/submissions'}}
                         {{else}}
 {{> 'homework/submission'}}
 {{> 'homework/feedback'}}
-{{> 'homework/discussion'}}
                             {{#if publicSubmissions}}
 {{> 'homework/submissions'}}
+                            {{else}}
+{{> 'homework/discussion'}}
                             {{/if}}
                         {{/ifvalue}}
                     {{/if}}
