--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -4,7 +4,7 @@
 		{{#ifvalue teacherId value=currentUser._id}}
 			<a id="comment-tab-link" 	class="tab-link">Bewertung</a>
 		{{/ifvalue}}
-		<a id="student-comment-tab-link" class="tab-link">Diskussion</a>
+		<a id="discussion-tab-link" class="tab-link">Diskussion</a>
 	</nav>
 	<div class="tabs">
 		<div id="submission" class="tab-content active">
