--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -1,4 +1,4 @@
-<section id="extended" class="tab-content section-homeworkdetails">
+<section id="extended" class="tab-content section-homeworkdetails active">
     <div class="homework">
         <div class="description">
             {{{this.description}}}
