--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -6,7 +6,7 @@
             {{#if submission.gradeComment}}
                 {{{submission.gradeComment}}}
             {{else}}
-                <p>Kein Kommentar.</p>
+                <p>Kein Bewertungstext vorhanden.</p>
             {{/if}}
         </div>
     </div>
