--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -28,7 +28,7 @@
                                                 border-color: {{color}};{{/if}}">
                                             <time class="lesson-time">{{comment}}</time>
                                             <h3 class="card-title">{{title}}</h3>
-                                            <p class="card-text"></p>
+                                            <p class="card-text">{{location}}</p>
                                         </div>
                                     </a>
                                 {{/each}}
