--- a/views/administration/forms/form-news.hbs
+++ b/views/administration/forms/form-news.hbs
@@ -7,10 +7,10 @@
 
 <div class="form-group">
     <label>Inhalt</label>
-    <textarea type="text" class="form-control htmleditor" name="content" placeholder="Inhalt der Nachricht..." required></textarea>
+    <textarea type="text" class="form-control customckeditor" name="content" placeholder="Inhalt der Nachricht..." required></textarea>
 </div>
 
 <div class="form-group">
     <label>Datum</label>
-    <input class="form-control" name="displayAt" type="datetime-local" placeholder="dd.mm.yyyy hh:mm" required />
+    <input class="form-control" name="displayAt" type="text" data-datetime required />
 </div>
