ui fixes for course details

--- a/views/courses/run-lti.hbs
+++ b/views/courses/run-lti.hbs
@@ -5,6 +5,6 @@
     {{/content}}
 
     {{#content "page"}}
-        <iframe class="lti-frame" src="/courses/{{course._id}}/tools/run/{{tool._id}}"></iframe>
+        <iframe class="lti-frame" src="/courses/{{course._id}}/tools/run/{{tool._id}}" frameborder="0"></iframe>
     {{/content}}
 {{/extend}}
