--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -68,6 +68,7 @@
                         {{/if}}
                         {{#userHasPermission "COURSE_EDIT"}}
                             <a href="/courses/{{../_id}}/topics/add" class="btn btn-secondary margin-top">
+                                <i class="fa fa-plus" aria-hidden="true"></i>
                                 Thema hinzufügen
                             </a>
                         {{/userHasPermission}}
@@ -110,8 +111,8 @@
                     </div>
 
                     {{#userHasPermission "COURSE_EDIT"}}
-                        <a href="/courses/{{../_id}}/tools/add" class="btn btn-secondary margin-top">Neues Tool
-                            hinzufügen</a>
+                        <a href="/courses/{{../_id}}/tools/add" class="btn btn-secondary margin-top">
+                            <i class="fa fa-plus" aria-hidden="true"></i>  Neues Tool hinzufügen</a>
                     {{/userHasPermission}}
                 </div>
             </div>
@@ -120,7 +121,7 @@
                     {{#userHasPermission "COURSE_EDIT"}}
                         <a href="/courses/{{../_id}}/edit" class="btn btn-add btn-primary">Kurs bearbeiten</a>
                         <a href="/courses/{{../_id}}/"
-                           class="btn btn-delete-course btn-primary"
+                           class="btn btn-delete-course btn-secondary"
                            target="_blank"
                            data-method="delete-material"
                            data-name="{{../name}}"
