Farbpunkt zu Aufgaben im Dashboard hinzugefügt

--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -70,7 +70,7 @@
                                                     <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
                                                 </div>
 
-                                                <div class="card-text"><strong>{{#if courseId}}[{{courseId.name}}] {{/if}}{{name}}</strong></div>
+                                                <div class="card-text"><strong>{{#if courseId}}<span style="color:{{color}}">●</span> [{{courseId.name}}] {{/if}}{{name}}</strong></div>
                                                 <p class="card-text">{{{truncate description}}}</p>
                                             </div>
                                             <div class="card-footer">
@@ -100,7 +100,7 @@
                                                     <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
                                                 </div>
 
-                                                <div class="card-text"><strong>{{#if courseId}}[{{courseId.name}}] {{/if}}{{name}}</strong></div>
+                                                <div class="card-text"><strong>{{#if courseId}}<span style="color:{{color}}">●</span> [{{courseId.name}}] {{/if}}{{name}}</strong></div>
                                                 <p class="card-text">{{{truncate description}}}</p>
                                             </div>
                                             <div class="card-footer">
