icons of 18 endings

--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -108,7 +108,7 @@
                                         <div class="card-title">
                                             <div class="col-sm-3 no-padding">
                                                 <div class="file-preview"
-                                                     style="background-image: url({{this.thumbnail}})"></div>
+                                                     style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px ;background-size: 50px;"></div>
                                             </div>
                                             <a class="title">
                                                 {{this.name}}
