--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -37,17 +37,19 @@
 
                         <div class="row">
                             <div class="timeline">
+                                <div class="container-fluid no-padding">
+                                        <table style="width:100%">
+                                            <tr>
+                                                {{#each hours}}
+                                                    <td style="width:10%">
+                                                        <div class="tick">{{this}}.00</div>
+                                                    </td>
+                                                {{/each}}
+                                            </tr>
+                                        </table>
+                                </div>
                                 <div class="current-time" style="width:{{currentTimePercentage}}%;">
                                     <span>{{currentTime}}</span>
-                                </div>
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        {{#each hours}}
-                                            <div class="col-sm-1">
-                                                <div class="tick">{{this}}.00</div>
-                                            </div>
-                                        {{/each}}
-                                    </div>
                                 </div>
                             </div>
                         </div>
