add next lesson view

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -15,6 +15,7 @@
             <div class="row description">
                 <div class="col-sm-12">
                     <p class="lead">{{description}}</p>
+                    <p class="text-muted">Nächste Unterrichtsstunde: {{nextEvent}}</p>
                 </div>
             </div>
 
