--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -70,6 +70,17 @@
 </div>
 
 <div class="form-group">
+    <label>Vertretungs Lehrer</label>
+    <select name="substitutionIds[]" multiple data-placeholder="Lehrer auswählen">
+        {{#each substitutions}}
+            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+                {{this.firstName}} {{this.lastName}}
+            </option>
+        {{/each}}
+    </select>
+</div>
+
+<div class="form-group">
     <label>Schüler / Teilnehmer</label>
 
     <select name="userIds[]" multiple data-placeholder="Schüler auswählen">
