--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -5,137 +5,141 @@
     {{/content}}
 
     {{#content "page"}}
-        <div class="row">
-            <div class="col-sm-12">
-                <section class="section-timetable">
+        <div class="row mobile-no-margin-right">
+            <div class="row">
+                <div class="col-sm-12">
                     <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-12 no-padding">
-                                <h5>Stundenplan</h5>
-                                <time class="selected-date">{{eventsDate}}</time>
-                            </div>
-                        </div>
-                    </div>
 
-
-                    <div class="container-fluid timetable">
-                        <div class="row lesson-cards">
-                            <div>
-                                {{#each events}}
-                                    <a class="lesson-card"{{#if url}}href="{{url}}"{{/if}}
-                                       style="width: {{style.width}}%; left: {{style.left}}%;">
-                                        <div class="card card-block" style="{{#if color}}background-color: {{color}};
-                                                border-color: {{color}};{{/if}}">
-                                            <time class="lesson-time">{{comment}}</time>
-                                            <h3 class="card-title">{{title}}</h3>
-                                            <p class="card-text">{{location}}</p>
-                                        </div>
-                                    </a>
-                                {{/each}}
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="timeline">
-                                <div class="container-fluid no-padding">
-                                        <table style="width:100%">
-                                            <tr>
-                                                {{#each hours}}
-                                                    <td style="width:10%">
-                                                        <div class="tick">{{this}}.00</div>
-                                                    </td>
-                                                {{/each}}
-                                            </tr>
-                                        </table>
-                                </div>
-                                <div class="current-time" style="width:{{currentTimePercentage}}%;">
-                                    <span>{{currentTime}}</span>
+                        <section class="section-timetable">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <h5>Stundenplan</h5>
+                                    <time class="selected-date">{{eventsDate}}</time>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </section>
 
-
-                <section class="section-tasks">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-12 no-padding"><h5>Gestellte Aufgaben</h5></div>
-                        </div>
-                        <div class="row tasks">
-                            {{#each homeworks}}
-                                <div class="card-deck">
-                                    {{#each this}}
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <div class="card-text">
-                                                    <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
+                            <div class="container-fluid timetable">
+                                <div class="row lesson-cards">
+                                    <div>
+                                        {{#each events}}
+                                            <a class="lesson-card"{{#if url}}href="{{url}}"{{/if}}
+                                               style="width: {{style.width}}%; left: {{style.left}}%;">
+                                                <div class="card card-block" style="{{#if color}}background-color: {{color}};
+                                                        border-color: {{color}};{{/if}}">
+                                                    <time class="lesson-time">{{comment}}</time>
+                                                    <h3 class="card-title">{{title}}</h3>
+                                                    <p class="card-text">{{location}}</p>
                                                 </div>
-
-                                                <div class="card-text"><strong>{{#if courseId}}<span style="color:{{color}}">●</span> [{{courseId.name}}] {{/if}}{{name}}</strong></div>
-                                                <p class="card-text">{{{truncate description}}}</p>
-                                            </div>
-                                            <div class="card-footer">
-                                                <a class="btn btn-primary btn-block" href="{{url}}">Zur Aufgabe</a>
-                                            </div>
-                                        </div>
-                                    {{/each}}
-                                </div>
-                            {{/each}}
-                        </div>
-                    </div>
-                </section>
-                
-                <section class="section-tasks">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-12 no-padding"><h5>Meine Aufgaben</h5></div>
-                        </div>
-                        <div class="row tasks">
-                            {{#each myhomeworks}}
-                                <div class="card-deck">
-                                    {{#each this}}
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <div class="card-text">
-                                                    <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
-                                                </div>
-
-                                                <div class="card-text"><strong>{{#if courseId}}[{{courseId.name}}] {{/if}}{{name}}</strong></div>
-                                                <p class="card-text">{{{truncate description}}}</p>
-                                            </div>
-                                            <div class="card-footer">
-                                                <a class="btn btn-primary btn-block" href="{{url}}">Zur Aufgabe</a>
-                                            </div>
-                                        </div>
-                                    {{/each}}
-                                </div>
-                            {{/each}}
-                        </div>
-                    </div>
-                </section>
-
-
-                <section class="section-news">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-12 no-padding"><h5>Neuigkeiten</h5></div>
-                        </div>
-                        <div class="row articles">
-                            <div class="card-group">
-                                {{#each news}}
-                                    <div class="card card-block"><strong class="card-text">{{name}}</strong>
-                                        <p class="card-text">{{summary}}</p>
-                                        <p class="card-text">
-                                            <small class="text-muted">{{timeFromNow date}}</small>
-                                        </p>
-                                        <!--<a href="{{url}}">Weiterlesen</a>-->
+                                            </a>
+                                        {{/each}}
                                     </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="timeline">
+                                        <div class="container-fluid">
+                                                <table style="width:100%">
+                                                    <tr>
+                                                        {{#each hours}}
+                                                            <td style="width:10%">
+                                                                <div class="tick">{{this}}.00</div>
+                                                            </td>
+                                                        {{/each}}
+                                                    </tr>
+                                                </table>
+                                        </div>
+                                        <div class="current-time" style="width:{{currentTimePercentage}}%;">
+                                            <span>{{currentTime}}</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+
+
+                    <section class="section-tasks">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-sm-12"><h5>Gestellte Aufgaben</h5></div>
+                            </div>
+                            <div class="tasks row card-deck-row">
+                                {{#each homeworks}}
+                                    {{#each this}}
+                                        <div class="col-md-4 col-sm-6 col-xs-12">
+                                            <div class="card h-100">
+                                                <div class="card-block">
+                                                    <div class="card-text">
+                                                        <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
+                                                    </div>
+
+                                                    <div class="card-text"><strong>{{#if courseId}}<span style="color:{{color}}">●</span> [{{courseId.name}}] {{/if}}{{name}}</strong></div>
+                                                    <p class="card-text">{{{truncate description}}}</p>
+                                                </div>
+                                                <div class="card-footer">
+                                                    <a class="btn btn-primary btn-block" href="{{url}}">Zur Aufgabe</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {{/each}}
                                 {{/each}}
                             </div>
                         </div>
-                    </div>
-                </section>
+                    </section>
+
+                    <section class="section-tasks">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-sm-12"><h5>Meine Aufgaben</h5></div>
+                            </div>
+                            <div class="row tasks card-deck-row">
+                                {{#each myhomeworks}}
+                                    {{#each this}}
+                                        <div class="col-md-4 col-sm-6 col-xs-12">
+                                            <div class="card h-100">
+                                                <div class="card-block">
+                                                    <div class="card-text">
+                                                        <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
+                                                    </div>
+
+                                                    <div class="card-text"><strong>{{#if courseId}}[{{courseId.name}}] {{/if}}{{name}}</strong></div>
+                                                    <p class="card-text">{{{truncate description}}}</p>
+                                                </div>
+                                                <div class="card-footer">
+                                                    <a class="btn btn-primary btn-block" href="{{url}}">Zur Aufgabe</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {{/each}}
+                                {{/each}}
+                            </div>
+                        </div>
+                    </section>
+
+
+                    <section class="section-news">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-sm-12"><h5>Neuigkeiten</h5></div>
+                            </div>
+                            <div class="row articles">
+                                <div class="col-sm-12">
+                                    <div class="card-group">
+                                        {{#each news}}
+                                            <div class="card card-block"><strong class="card-text">{{name}}</strong>
+                                                <p class="card-text">{{summary}}</p>
+                                                <p class="card-text">
+                                                    <small class="text-muted">{{timeFromNow date}}</small>
+                                                </p>
+                                                <!--<a href="{{url}}">Weiterlesen</a>-->
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
     {{/content}}
