--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -156,7 +156,7 @@
             </section>
         </div>
 
-        {{#embed "lib/components/modal" class="open-modal" title="Möchtest du diese Datei mit einem Externen Dienst öffnen?"}}
+        {{#embed "lib/components/modal" class="open-modal" title="Möchtest du diese Datei mit einem externen Dienst öffnen?"}}
             {{#content "body"}}
                 <div class="modal-body">
                     <input class="box" type="checkbox" name="allowExternalViewers" value="save">Diese Auswahl merken<br>
