--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -142,6 +142,10 @@
              max-width: 100%;
              max-height: 100%;
          }
+        .vieweriframe {
+            width: 90%;
+            height: 90vh;
+        }
     }
 
     .lightbox img {
