--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -7,6 +7,7 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
         <script src="/scripts/files.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery.cookie.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
@@ -74,7 +75,8 @@
             <section class="file-viewer">
                 <a href="#_" class="lightbox" id="file-view" onclick="videojs('my-video').ready(function () {this.pause();});
                                                                       $('#link').html('');
-                                                                      $('#picture').attr('src', '');">
+                                                                      $('#picture').attr('src', '');
+                                                                      $('#file-view').css('display','none');">
                     <video id="my-video" class="video-js vjs-default-skin" onclick="videoClick(event);" autoplay controls preload="auto" data-setup="{'fluid': true}}"></video>
                     <script src="https://vjs.zencdn.net/5.19.2/video.js"></script>
                     <img id="picture">
@@ -159,6 +161,18 @@
             </section>
 
         </div>
+
+        {{#embed "lib/components/modal" class="open-modal" title="Möchtest du diese Datei mit einem externen Dienst öffnen?"}}
+            {{#content "body"}}
+                <div class="modal-body">
+                    <input class="box" type="checkbox" name="allowExternalViewers" value="save">Diese Auswahl merken<br>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">Abbrechen</button>
+                    <button type="submit" class="btn btn-primary btn-submit">Öffnen</button>
+                </div>
+            {{/content}}
+        {{/embed}}
 
 
         {{#embed "lib/components/modal-form" class="edit-modal" title="Neuer Ordner" closeLabel="Abbrechen" submitLabel="Ordner erstellen"}}
