--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -94,7 +94,7 @@
                                 <div class="openFile">
                                     <div class="card-block"
                                          onclick="location.href='#file-view';
-                                                 fileViewer('{{this.type}}', '{{this.file}}');">
+                                                 fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}');">
                                         <div class="card-title">
                                             <div class="col-sm-3 no-padding">
                                                 <div class="file-preview"
