--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -17,8 +17,10 @@
                 <section class="section-upload" data-path="{{path}}">
                     <div class="container-fluid">
                         <div class="row">
-                            <form class="form-upload" action="/files/upload/">
-                                <span><i class="fa fa-cloud-upload"></i> Dateien zum Hochladen ablegen.</span>
+                            <form class="form-upload dz-clickable" action="/files/upload/">
+                                <div class="dz-default dz-message" data-dz-message="">
+                                    <span><i class="fa fa-cloud-upload dz-clickable"></i> Dateien zum Hochladen ablegen.</span>
+                                </div>
                             </form>
                             <div class="progress-bar">
                                 <div class="progress">
