--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -144,3 +144,46 @@
     }
   }
 }
+
+.loadingspinner {
+  text-align: center;
+  display:inline-block;
+  vertical-align: bottom;
+  margin-left: .5em;
+}
+
+.loadingspinner > div {
+  width: .5em;
+  height: .5em;
+  background-color: #fff;
+  margin: 0 1px;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.loadingspinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.loadingspinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
