import Button nur anzeigen, wenn Abgabe vorhanden

--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -38,7 +38,9 @@
                                 {{{this.submission.gradeOptions}}}
                         </select>
                     </div>
-                    <button class="importsubmission btn btn-secondary btn-sm float-xs-right" data="{{this.submission._id}}">Abgabe des Schülers importieren</button>
+                    {{#if this.submission.comment}}
+                        <button class="importsubmission btn btn-secondary btn-sm float-xs-right" data="{{this.submission._id}}">Abgabe des Schülers importieren</button>
+                    {{/if}}
                     <h6>Kommentar</h6>
                     <textarea id="evaluation {{this.submission._id}}" name="gradeComment" type="text" class="form-control customckeditor" placeholder="Bewertungskommentar">{{this.submission.gradeComment}}</textarea>
                 </div>
